--- a/CHATOPIA/CHATOPIA.csproj
+++ b/CHATOPIA/CHATOPIA.csproj
@@ -60,6 +60,7 @@
     <Compile Include="ViewModels\MessageEntryViewModel.cs" />
     <Compile Include="ViewModels\MessgeStreamViewModel.cs" />
     <Compile Include="ViewModels\RoomListViewModel.cs" />
+    <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="Views\MessageEntryView.xaml.cs">
       <DependentUpon>MessageEntryView.xaml</DependentUpon>
     </Compile>
@@ -68,6 +69,9 @@
     </Compile>
     <Compile Include="Views\RoomListView.xaml.cs">
       <DependentUpon>RoomListView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ShellView.xaml.cs">
+      <DependentUpon>ShellView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -108,6 +112,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\RoomListView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ShellView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
